--- a/sp-paginate/demo/index.html
+++ b/sp-paginate/demo/index.html
@@ -1,17 +1,21 @@
 
 <script type="text/stache" id="demo-html">
-  <h1>Paginate Demo</h1>
+  <div class="container">
+  <h1 class="title is-1">Paginate Demo</h1>
 
-  <h2>Default</h2>
+  <h2 class="title is-2">Default</h2>
   <p>Index: {{page1}}
   <sp-paginate pages="300" vm:activePageIndex:to="page1" />
 
-  <h2>Simplified</h2>
+  <h2 class="title is-2">Compact</h2>
   <p>Index: {{page2}}</p>
-  <sp-paginate pages="300" hide-pages hide-first hide-last activePageIndex:to="page2" />
+  <div style="width: 80px;">
+  <sp-paginate pages="300" compact:raw="true" activePageIndex:to="page2" />
+  </div>
+  </div>
 </script>
 
-<script src="../../docs/spectre/steal.production.js" main="spectre-canjs/index">
-  // <script src="../../node_modules/steal/steal.js" main="spectre-canjs/index">
+<!-- <script src="../../docs/spectre/steal.production.js" main="spectre-canjs/index"> -->
+  <script src="../../node_modules/steal/steal.js" main="spectre-canjs/index">
   steal.import('spectre-canjs/sp-paginate/demo/paginate');
 </script>
