--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
 <demo-app />
 
-<script src="../node_modules/steal/steal.js" main="spectre-canjs/demo/index" id="demo-source">
+<script src="../node_modules/steal/steal.js" main="can-bulma/demo/index" id="demo-source">
 </script>
