--- a/sp-dropdown/demo/index.html
+++ b/sp-dropdown/demo/index.html
@@ -85,7 +85,7 @@
 
 </script>
 
-<!-- <script src="../../node_modules/steal/steal.js" main="spectre-canjs/index"> -->
-<script src="../../docs/spectre/steal.production.js" main="spectre-canjs/index">
-  steal.import('spectre-canjs/sp-dropdown/demo/dropdown');
+<!-- <script src="../../node_modules/steal/steal.js" main="can-bulma/index"> -->
+<script src="../../docs/spectre/steal.production.js" main="can-bulma/index">
+  steal.import('can-bulma/sp-dropdown/demo/dropdown');
 </script>
