--- a/sp-form/demo/basic/index.html
+++ b/sp-form/demo/basic/index.html
@@ -1,7 +1,7 @@
-<script src="../../../node_modules/steal/steal.js" main="spectre-canjs/docs-main" id="demo-source">
-// <script src="../../../docs/spectre/steal.production.js" main="spectre-canjs/index">
+<script src="../../../node_modules/steal/steal.js" main="can-bulma/docs-main" id="demo-source">
+// <script src="../../../docs/spectre/steal.production.js" main="can-bulma/index">
     Promise.all([
-        steal.import('spectre-canjs/sp-form/demo/basic/basic'),
+        steal.import('can-bulma/sp-form/demo/basic/basic'),
     ]).then(function([form]){
         form.default();
     });
